--- a/01_web_scraping_intro (1).ipynb
+++ b/01_web_scraping_intro (1).ipynb
@@ -158,7 +158,7 @@
     "    This <br> is a paragraph <br> with <br> line breaks\n",
     "  </p>\n",
     "\n",
-    "  <p style=\"color:red\">\n",
+    "  <p style=\"color:blue\">\n",
     "    Add colour to your paragraphs.\n",
     "  </p>\n",
     "\n",
